Fix unexpected extra spaces and newlines in text on the 'About' page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,10 +73,6 @@ h2 {
   margin-top: 0;
 }
 
-p, ul *, ol * {
-  white-space: pre-wrap;
-}
-
 ul, ol {
   margin-top: 0;
 }
